# CoEvalProject

./: .gitignore  app.py  app_v2.py  co_eval.py  co_eval_v2.py  config.py  main.py  pyproject.toml  readme.md  sample_data.py
frontend/data/: samples.json
